<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="ra48_2014.pnrs1.rtrk.taskmanager.NoviZadatakActivity"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <EditText
        android:hint="@string/new_task"
        android:id="@+id/new_task_txt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:layout_marginLeft="7.5dp"
        android:layout_marginRight="7.5dp"
        android:layout_marginTop="7.5dp"
        android:background="@drawable/edit_text_border" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_above="@+id/checkBoxContainer"
        android:layout_below="@+id/new_task_txt"
        android:layout_margin="10dp"
        android:weightSum="3">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginBottom="7dp"
            android:weightSum="3">

            <Button
                android:text="@string/time_date"
                android:id="@+id/time_date_btn"
                android:textAllCaps="false"
                android:background="@drawable/btn_border"
                android:layout_gravity="left"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"/>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:orientation="vertical"
                android:layout_weight="1"
                android:weightSum="2">

                <TextView
                    android:id="@+id/time_txt"
                    android:text="@string/time"
                    android:layout_gravity="center"
                    android:layout_width="wrap_content"
                    android:layout_height="0dp"
                    android:layout_weight="1"/>

                <TextView
                    android:id="@+id/date_txt"
                    android:text="@string/date"
                    android:layout_gravity="center"
                    android:layout_width="wrap_content"
                    android:layout_height="0dp"
                    android:layout_weight="1"/>
            </LinearLayout>

        </LinearLayout>


        <EditText
            android:hint="@string/description"
            android:id="@+id/description_txt"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:textAlignment="center"
            android:background="@drawable/edit_text_border"
            android:layout_weight="3"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/checkBoxContainer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/secondBottomContainer"
        android:orientation="horizontal">

        <CheckBox
            android:id="@+id/check_box"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/check_box" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/secondBottomContainer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_above="@+id/bottomContainer"
        android:weightSum="3">

        <Button
            android:id="@+id/red_btn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:backgroundTint="@color/red"/>

        <Button
            android:id="@+id/yellow_btn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:backgroundTint="@color/yellow"/>

        <Button
            android:id="@+id/green_btn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:backgroundTint="@color/green"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/bottomContainer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginBottom="5dp"
        android:layout_alignParentBottom="true"
        android:weightSum="2">

        <Button
            android:text="@string/add"
            android:id="@+id/add_btn"
            android:textAllCaps="false"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="@drawable/btn_border"
            android:layout_marginRight="2dp"
            android:layout_marginLeft="2dp"
            android:layout_weight="1" />

        <Button
            android:text="@string/cancel"
            android:id="@+id/cancel_btn"
            android:textAllCaps="false"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginRight="2dp"
            android:layout_marginLeft="2dp"
            android:background="@drawable/btn_border"
            android:layout_weight="1" />

    </LinearLayout>


</RelativeLayout>
